<resources>
    <string name="workscreen_delete">This will delete home screen and all the items it contains</string>
    <string name="application_name">TouchWiz Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="activity_not_found">Application is not installed</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="delete_homescreen_application">Delete</string>
    <string name="long_press_widget_to_add">Tap and hold a widget to move it</string>
    <string name="market">Market</string>
    <string name="widget_dims_format">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Could not drop item onto this homescreen</string>
    <string name="external_drop_widget_pick_title">Select widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="remove_app_folder_title">Remove folder</string>
    <string name="remove_app_folder_message">Folder will be removed. Applications in this folder will not be uninstalled</string>
    <string name="remove_app_folder_confirm">OK</string>
    <string name="remove_app_folder_cancel">Cancel</string>
    <string name="title_wallpaper_to">Set wallpaper for</string>
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <string name="menu_item_wallpaper_lockscreen">Lock screen</string>
    <string name="menu_item_wallpaper_both">Home and lock screens</string>
    <string name="menu_item_apps_and_widgets">Apps and widgets</string>
    <string name="menu_item_folder">Folder</string>
    <string name="menu_item_page">Page</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="menu_item_add_item_title">Home screen</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Applications</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="out_of_space">No more room on this Home screen</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat</string>
    <string name="shortcut_installed">Shortcut %s created</string>
    <string name="shortcut_uninstalled">Shortcut %s was removed</string>
    <string name="shortcut_duplicate">Shortcut %s already exists</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_application">Select application</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="workspace_empty_message">Tap and hold screen to add items</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Applications</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="accessibility_open_main_menu_page_edit">Open Main Menu Paged Edit</string>
    <string name="accessibility_open_home_screen_page_edit">Open Home Screen Paged Edit</string>
    <string name="accessibility_add_home_screen_button">Add Home Screen Button</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="options_menu">Options Menu</string>
    <string name="options_menu_market">Play Store</string>
    <string name="options_menu_edit">Edit</string>
    <string name="options_menu_search">Search</string>
    <string name="options_menu_uninstall">Uninstall</string>
    <string name="options_menu_downloaded_apps">Downloaded apps</string>
    <string name="options_menu_view_type">View type</string>
    <string name="options_menu_share_app">Share app</string>
    <string name="options_menu_sel_apps_to_hide">Hide applications</string>
    <string name="options_menu_sel_apps_to_unhide">Show hidden applications</string>
    <string name="options_home_add">Add</string>
    <string name="options_home_wallpaper">Wallpaper</string>
    <string name="options_home_search">Search</string>
    <string name="options_home_notifications">Notifications</string>
    <string name="options_home_edit">Edit page</string>
    <string name="options_home_settings">Settings</string>
    <string name="options_home_add_page">Add or Remove a Page</string>
    <string name="menu_edit_done">Done</string>
    <string name="menu_edit_save">Save</string>
    <string name="menu_edit_cancel">Cancel</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="menu_downloaded_apps">Downloaded apps</string>
    <string name="menu_selected">%d selected</string>
    <string name="menu_all">All</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_new_page_created_toast">New page has been added</string>
    <string name="menu_edit_cancel_msg">All changes will be discarded</string>
    <string name="help_url" />
    <string name="cab_menu_delete_app">Uninstall application</string>
    <string name="cab_menu_app_info">Application details</string>
    <string name="cab_app_selection_text">1 application selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an application to add shortcuts without user intervention</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an application to remove shortcuts without user intervention</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Home</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Home</string>
    <string name="menu_widgets_search_hint">Search widgets</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system application and cannot be uninstalled</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="folder">Folder</string>
    <string name="folder_opened">Folder opened</string>
    <string name="folder_closed">Folder closed</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Workspace %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your home screen, touch &amp; hold it</string>
    <string name="cling_dismiss">OK</string>
    <string name="uninstall_title">Uninstall</string>
    <string name="uninstall_message">%s will be uninstalled</string>
    <string name="uninstall_confirm">OK</string>
    <string name="uninstall_cancel">Cancel</string>
    <string name="viewtype_title">View type</string>
    <string name="viewtype_custom_grid">Customizable grid</string>
    <string name="viewtype_alphabetic_grid">Alphabetical grid</string>
    <string name="viewtype_alphabetic_list">Alphabetical list</string>
    <string name="viewtype_cancel">Cancel</string>
    <string name="rearrange_menu_icons_not_allowed">Can only rearrange icons in Customizable grid</string>
    <string name="quickview_workspace_default_page_change">Default home screen has been changed</string>
    <string name="workscreen_delete_title">Remove home screen page</string>
    <string name="quickview_menu_no_rearrange_alpha_mode">Unable to reorganize page in alphabetical grid view</string>
    <string name="quickview_menu_no_rearrange_widget_tab">Unable to reorganize page in widget tab</string>
    <string name="alphabetical_list_indicator_indexes">\#ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="package_info" formatted="false">"I recommend %s. 
Visit the links from your Android device. 
%s"</string>
    <string name="title_share_via">Share via</string>
    <string name="motion_dialog_learn_about_wave">Learn about pan</string>
    <string name="motion_dialog_explanation">Pan your device to left or right while holding icon to move it to another page</string>
    <string name="motion_dialog_turned_off">This motion is disabled</string>
    <string name="motion_dialog_turn_on_message">Use motion?</string>
    <string name="motion_dialog_do_not_ask_again">Do not ask again</string>
    <string name="motion_dialog_ok">Enable motion</string>
    <string name="motion_dialog_cancel">Cancel</string>
    <string name="motion_dialog_done">Done</string>
    <string name="cling_do_not_show_again">Do not show again</string>
    <string name="cling_message_1">Swipe left or right to switch between home screens</string>
    <string name="cling_message_2">Access your notifications by pulling down the notification panel from the top</string>
    <string name="cling_message_3">Tap to see all your apps</string>
    <string name="cling_next">Next</string>
    <string name="cling_ok">OK</string>
    <string name="cling_msg_cnt_1">1/3</string>
    <string name="cling_msg_cnt_2">2/3</string>
    <string name="cling_msg_cnt_3">3/3</string>
    <string name="cling_menu_message">Tap and hold an application to move it to the home screen. Then you can drag it into place</string>
    <string name="cling_widget_message">Tap and hold a widget. It will move to the home screen, and you can drag it into place</string>
    <string name="home_edit_bar_create_folder_title">Create folder</string>
    <string name="home_edit_bar_create_page_title">Create page</string>
    <string name="home_edit_bar_delete_title">Delete</string>
    <string name="home_edit_bar_app_info_title">App info</string>
    <string name="market_sample">This is an Engineering Sample product and is not recommended for a comprehensive quality evaluation</string>
    <string name="menu_tab_download">Download</string>
    <string name="tips_editmode_homescreen_body">Use the menu edit function to position of widget, shortcut and folder and to resize widget</string>
</resources>