<?xml version="1.0" encoding="utf-8"?>
<merge android:orientation="horizontal" android:background="@drawable/tw_tab_unselected_bar_holo" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/menu_tabBarHeight"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.launcher2.MenuEditBottomBar android:gravity="center" android:orientation="horizontal" android:id="@id/menu_edit_bar_port" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:alpha="0.0">
        <include layout="@layout/menu_title_bar_divider" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_new_folder" android:layout_width="wrap_content" android:layout_height="@dimen/home_editBarHeight">
            <ImageView android:id="@id/new_folder" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/menu_ic_create_folder" android:scaleType="center" />
            <TextView android:textColor="@color/edit_cancel_menu_text" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/menu_new_folder_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="50.0dip" android:text="@string/home_edit_bar_create_folder_title" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
        </LinearLayout>
        <include layout="@layout/menu_title_bar_divider" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_new_page" android:layout_width="wrap_content" android:layout_height="@dimen/home_editBarHeight">
            <ImageView android:id="@id/new_page" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/menu_ic_create_page" android:scaleType="center" />
            <TextView android:textColor="@color/edit_cancel_menu_text" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/menu_new_page_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="50.0dip" android:text="@string/home_edit_bar_create_page_title" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
        </LinearLayout>
        <include layout="@layout/menu_title_bar_divider" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_app_info" android:layout_width="wrap_content" android:layout_height="@dimen/home_editBarHeight">
            <ImageView android:id="@id/app_info" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/home_ic_info" android:scaleType="center" />
            <TextView android:textColor="@color/edit_cancel_menu_text" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/app_info_txt" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="50.0dip" android:text="@string/home_edit_bar_app_info_title" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
        </LinearLayout>
        <include layout="@layout/menu_title_bar_divider" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/layout_delete" android:layout_width="wrap_content" android:layout_height="@dimen/home_editBarHeight">
            <ImageView android:id="@id/delete" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/menu_ic_delete" android:scaleType="center" />
            <TextView android:textColor="@color/edit_cancel_menu_text" android:ellipsize="marquee" android:gravity="center_vertical" android:id="@id/menu_delete_text" android:layout_width="wrap_content" android:layout_height="fill_parent" android:maxWidth="50.0dip" android:text="@string/options_menu_uninstall" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
        </LinearLayout>
    </com.android.launcher2.MenuEditBottomBar>
</merge>