<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher2.HomeEditBar android:gravity="center" android:visibility="gone" android:alpha="0.0" android:translationY="50.0dip" launcher:position="bottom"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:launcher="http://schemas.android.com/apk/res/com.sec.android.app.launcher">
    <LinearLayout android:ellipsize="marquee" android:orientation="vertical" android:id="@id/layout_new_folder" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarHeight" android:layout_marginLeft="@dimen/homeEditBar_iconGap" android:layout_weight="1.0">
        <ImageView android:ellipsize="marquee" android:id="@id/new_folder" android:paddingTop="@dimen/home_bottomBarTopPadding" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarImageHeight" android:src="@drawable/home_ic_create_folder" android:scaleType="center" />
        <TextView android:textSize="@dimen/home_editBarIconTextSize" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="center_horizontal" android:id="@id/new_folder_txt" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarTextHeight" android:text="@string/home_edit_bar_create_folder_title" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
    </LinearLayout>
    <LinearLayout android:ellipsize="marquee" android:orientation="vertical" android:id="@id/layout_new_page" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarHeight" android:layout_marginLeft="@dimen/homeEditBar_iconGap" android:layout_weight="1.0">
        <ImageView android:ellipsize="marquee" android:id="@id/new_page" android:paddingTop="@dimen/home_bottomBarTopPadding" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarImageHeight" android:src="@drawable/home_ic_create_page" android:scaleType="center" />
        <TextView android:textSize="@dimen/home_editBarIconTextSize" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="center_horizontal" android:id="@id/new_page_txt" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarTextHeight" android:text="@string/home_edit_bar_create_page_title" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
    </LinearLayout>
    <LinearLayout android:ellipsize="marquee" android:orientation="vertical" android:id="@id/layout_app_info" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarHeight" android:layout_marginLeft="@dimen/homeEditBar_iconGap" android:layout_weight="1.0">
        <ImageView android:ellipsize="marquee" android:id="@id/app_info" android:paddingTop="@dimen/home_bottomBarTopPadding" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarImageHeight" android:src="@drawable/home_ic_info" android:scaleType="center" />
        <TextView android:textSize="@dimen/home_editBarIconTextSize" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="center_horizontal" android:id="@id/app_info_txt" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarTextHeight" android:text="@string/home_edit_bar_app_info_title" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
    </LinearLayout>
    <LinearLayout android:ellipsize="marquee" android:orientation="vertical" android:id="@id/layout_delete" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarHeight" android:layout_marginLeft="@dimen/homeEditBar_iconGap" android:layout_weight="1.0">
        <com.android.launcher2.DeleteIcon android:ellipsize="marquee" android:id="@id/delete" android:paddingTop="@dimen/home_bottomBarTopPadding" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarImageHeight" android:src="@drawable/home_ic_delete" android:scaleType="center" />
        <TextView android:textSize="@dimen/home_editBarIconTextSize" android:textColor="#ffffffff" android:ellipsize="marquee" android:gravity="center_horizontal" android:id="@id/delete_txt" android:layout_width="fill_parent" android:layout_height="@dimen/home_bottomBarTextHeight" android:text="@string/home_edit_bar_delete_title" android:singleLine="true" android:shadowColor="@color/workspace_all_apps_and_delete_zone_text_shadow_color" android:shadowDy="1.0" android:shadowRadius="4.0" />
    </LinearLayout>
</com.android.launcher2.HomeEditBar>